fixed header alignment

--- a/CSS/resumestyle.css
+++ b/CSS/resumestyle.css
@@ -26,6 +26,7 @@ header nav {
 
 header a {
     flex-grow: 1;
+    min-width: 19.5%;
     border: 1px solid black;
     border-radius: 6px;
     margin: 0.25%;
@@ -34,6 +35,7 @@ header a {
     text-decoration: none;
     background-color: rgb(157, 88, 214);
     color: white;
+    box-sizing: border-box;
 }
 
 #top-section-wrapper {
@@ -41,8 +43,8 @@ header a {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    align-content: stretch;
-    align-items: stretch;
+    align-content: center;
+    align-items: flex-start;
 }
 
 #profile-photo {
@@ -74,13 +76,13 @@ header a {
 
 .resume-section h2 {
     text-align: center;
-    font-family: 'Verdana', 'Geneva', sans-serif;
+    font-family: 'Ubuntu', sans-serif;
     font-weight: bold;
 }
 
 .resume-section h3 {
     text-align: left;
-    font-family: 'Verdana', 'Geneva', sans-serif;
+    font-family: 'Ubuntu', sans-serif;
     font-weight: bold;
     text-decoration-line: underline;
 }
